[package]
name = "iletsync-web"
version = "0.0.1"
edition = "2021"

[dependencies]
secrecy = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22.0"
uuid = { version = "1.8.0", features = ["v4"]}

