[package]
name = "iletsync-web"
version = "0.0.1"
edition = "2021"

[dependencies]
secrecy = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
base64 = "0.22.0"
uuid = { version = "1.8.0", features = ["v4"]}
anyhow = "1.0.81"
backon = "0.4.3"
chrono = { version = "0.4.37", features = ["serde"]}
