[package]
name = "iletsync-web"
version = "0.0.1"
edition = "2021"

[dependencies]
secrecy = "0.8.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
smol = "2.0.0"
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
base64 = "0.22.0"
uuid = { version = "1.8.0", features = ["v4"]}
anyhow = "1.0.83"
backon = "0.4.3"
chrono = { version = "0.4.38", features = ["serde"]}
serde_with = { version = "3.8.1", features = ["chrono_0_4", "base64", "json", "macros"]}
rust_decimal = { version = "1.35", features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.34.2"
rayon = "1.10.0"
